[package]
name = "gather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
json5 = "0.4.1"
nix = { version = "0.26.2", features = ["term"] }
serde = { version = "1.0.152", features = ["derive"] }
signal-hook = "0.3.15"
termcolor = "1.2.0"
