[package]
name = "shunt"
description = "Run multiple commands in single terminal with docker compose like logs."
readme = "README.md"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
json5 = "0.4.1"
nix = { version = "0.26.2", features = ["term"] }
serde = { version = "1.0.152", features = ["derive"] }
signal-hook = "0.3.15"
termcolor = "1.2.0"
